<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".AddEmployeeActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/colorPrimary"
            android:paddingStart="10dp">

            <ImageView
                android:id="@+id/image_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:contentDescription="Back"
                android:padding="8dp"
                android:src="@drawable/ic_back"
                android:onClick="goBack" />

            <TextView
                android:id="@+id/text_employee_list"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:text="@string/DetailsTitle"
                android:textColor='@color/textColor'
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/modiff"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:contentDescription="modifier"
                android:padding="8dp"
                android:src="@drawable/ic_modifier"
                android:onClick="toggleEditMode" />
            <ImageView
                android:onClick="deleteEmployee"
                android:id="@+id/supp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:contentDescription="supprimer"
                android:padding="5dp"
                android:src="@drawable/ic_supprimer" />
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:id="@+id/validate_modif"
                android:contentDescription="validate modif"
                android:padding="5dp"
                android:src="@drawable/ic_check"
                android:visibility="gone"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBack"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_profile2"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:contentDescription="Profile Picture"
                android:scaleType="centerCrop"
                android:src="@drawable/rounded_button_background" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20sp"
                android:gravity="center"
                >
                <Button
                    android:id="@+id/button_edit_image"
                    android:layout_width="180sp"
                    android:layout_height="wrap_content"
                    android:text="@string/gallery_title"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/textColor"
                    android:onClick="openGallery2"/>
                <Button
                    android:id="@+id/button_edit_image2"
                    android:layout_width="180sp"
                    android:layout_height="wrap_content"
                    android:text="@string/camera_title"
                    android:layout_marginLeft="5sp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/textColor"
                    android:onClick="openCamera2"/>
            </LinearLayout>


            <EditText
                android:id="@+id/edittext_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20sp"
                android:layout_marginTop="20sp"
                android:background="@drawable/edittext_border"
                android:hint="@string/first_name_hint"
                android:padding="15sp" />


            <EditText
                android:id="@+id/edittext_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20sp"
                android:layout_marginTop="20sp"
                android:background="@drawable/edittext_border"
                android:hint="@string/last_name_hint"
                android:padding="15sp" />


            <EditText
                android:id="@+id/edittext_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20sp"
                android:layout_marginTop="20sp"
                android:background="@drawable/edittext_border"
                android:hint="@string/phone_hint"
                android:inputType="phone"
                android:padding="15sp" />


            <EditText
                android:id="@+id/edittext_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20sp"
                android:layout_marginTop="20sp"
                android:background="@drawable/edittext_border"
                android:hint="@string/mail_hint"
                android:inputType="textEmailAddress"
                android:padding="15sp" />


            <EditText
                android:id="@+id/edittext_job"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20sp"
                android:layout_marginTop="20sp"
                android:background="@drawable/edittext_border"
                android:hint="@string/job_hint"
                android:padding="15sp" />


            <EditText
                android:id="@+id/edittext_residence"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20sp"
                android:layout_marginTop="20sp"
                android:background="@drawable/edittext_border"
                android:hint="@string/residence_hint"
                android:padding="15sp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:gravity="center">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20sp"
                    android:layout_marginTop="10sp"
                    android:layout_marginBottom="20sp"
                    android:text="@string/DetailsUpdate"
                    android:textColor="@color/textColor"
                    android:onClick="updateEmployee" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginVertical="20sp"
                android:orientation="horizontal">

                <ImageButton
                    android:onClick="MakeCall"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/rounded_phone"
                    android:contentDescription="phone"
                    android:layout_marginHorizontal="10sp"
                    android:src="@drawable/ic_telephone" />

                <ImageButton
                    android:onClick="MakeSMS"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/rounded_sms"
                    android:contentDescription="sms"
                    android:layout_marginHorizontal="10sp"
                    android:src="@drawable/ic_sms" />

                <ImageButton
                    android:onClick="SendMail"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginHorizontal="10sp"
                    android:contentDescription="email"
                    android:background="@drawable/rounded_email"
                    android:src="@drawable/ic_email" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</ScrollView>